<resources>
    <string name="app_name">Farmsbook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_requirements">Requirements</string>
    <string name="title_orders">Suppliers</string>
    <string name="title_profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome to</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="disclaimer">By entering your number , you agree to our</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="waiting_to_automatically_detect_on_sms_sent_to">Waiting to automatically detect on SMS sent to</string>
    <string name="get_code_through_call">Get Code through Call</string>
    <string name="resend_the_code_in_25_seconds">Resend the Code (in 25 seconds)</string>
    <string name="verify">Verify</string>
    <string name="verify_your_number">Verify your \nNumber</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="name">Name</string>
    <string name="email_id">Email id</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="confirm">Confirm</string>
    <string name="farms">Farms</string>
    <string name="book">Book</string>
    <string name="farmsbook">FarmsBook</string>
    <string name="recommended">Farmer\'s Offers</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="add_listing">Add Listing</string>
    <string name="type_of_buy">Type of Buy</string>
    <string name="on_commission">On Commission</string>
    <string name="fixed_rate">Fixed Rate</string>
    <string name="crop_name">Crop Name</string>
    <string name="variety">Variety</string>
    <string name="rate">Rate %</string>
    <string name="price_range">Price Range</string>
    <string name="min_amount">Min Amount</string>
    <string name="max_amount">Max Amount</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="select_your_state">Select Your State</string>
    <string name="transportation">Transportation</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="type_of_farming">Type of Farming</string>
    <string name="unorganic">UnOrganic</string>
    <string name="organic">Organic</string>
    <string name="time_of_sowing">Time of sowing</string>
    <string name="select_month">Select month</string>
    <string name="submit">Submit</string>
    <string name="add_requirement">Add Requirement</string>
    <string name="required">Required</string>
    <string name="not_required">Not Required</string>
    <string name="search_product_farmer_etc">Search Product farmer etc</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="business_name">Business Name</string>
    <string name="business_turnover">Business Turnover</string>
    <string name="foundation_date">Foundation Date</string>
    <string name="search">Search</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_successfully_listed_nyour_crop">You have successfully listed \nyour crop</string>
    <string name="close">Close</string>
    <string name="my_crops">My Crops</string>
    <string name="manage">Manage</string>
    <string name="you_have_successfully_posted_nyour_offer">You have successfully posted \nyour offer</string>
    <string name="your_offer_details">Your Offer details</string>
    <string name="purchase_on">Purchase on</string>
    <string name="rate_of_commission">Rate of commission</string>
    <string name="price_you_offering">Price you offering</string>
    <string name="price">Price</string>
    <string name="per_kg">per kg</string>
    <string name="quantity_you_want">Quantity you want</string>
    <string name="delivery_place">Delivery place</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="you_have_successfully_posted_nyour_requirement">You have successfully posted \nyour requirement</string>
    <string name="buyers">Buyers</string>
    <string name="search_buyers">Search Buyers</string>
    <string name="add_crops">Add Crops</string>
    <string name="suppliers">Suppliers</string>
    <string name="search_suppliers">Search Suppliers</string>
    <string name="done">Done</string>
    <string name="well_done">Well Done</string>
    <string name="counter_offer">Counter Offer</string>
    <string name="date">Date</string>
    <string name="post_your_offer">Post your Offer</string>
    <string name="founded">Founded</string>
    <string name="turnover">Turnover</string>
    <string name="crops">Crops</string>
    <string name="contact_person">Contact person</string>
    <string name="add">Add</string>
    <string name="offers">Offers</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="product_details">Product Details</string>
    <string name="type_of_sale_available">Type of sale available</string>
    <string name="other_services_available">Other Services Available</string>
    <string name="farmer_s_info">Farmer\'s Info</string>
    <string name="call">Call </string>
    <string name="add_supplier">Add Supplier</string>
    <string name="post_offer">Post Offer</string>
    <string name="interest">Interest</string>
    <string name="requirement_posted_by">Requirement posted by</string>
    <string name="you_have_posted_your_interest_for_this_demand">You have posted your interest for this demand</string>
    <string name="listing">Listing</string>
    <string name="listings">Listings</string>
    <string name="offers_from_buyers_right_now">Offers from Buyers right now</string>
    <string name="offers_from_suppliers_right_now">Offers From Suppliers right now</string>
    <string name="edit">Edit</string>
    <string name="add2">Add +</string>
    <string name="interested">Interested</string>
    <string name="members">Members</string>
    <string name="crops_offered">Crops Offered</string>
    <string name="delete_listing">Delete Listing ?</string>
    <string name="this_listing_will_be_deleted_from_your_your_naccount_are_you_still_want_to_continue">This listing will be deleted from your your \naccount. Are you still want to continue?</string>
    <string name="delete">Delete</string>
    <string name="delete_requirement">Delete Requirement ?</string>
    <string name="this_requirement_will_be_deleted_from_your_your_naccount_are_you_still_want_to_continue">This requirement will be deleted from your your \naccount. Are you still want to continue?</string>
    <string name="filter_by">Filter By</string>
    <string name="select_your_crops">Select your crops</string>
    <string name="select">Select</string>
    <string name="joined">Joined</string>
    <string name="posted">Posted</string>
    <string name="requirements">Requirements</string>
    <string name="latest">Latest</string>
    <string name="suppliers_shown_interest">Suppliers shown interest</string>
    <string name="choose_language">Choose Language</string>
    <string name="farmer">Farmer</string>
    <string name="trader">Trader</string>
    <string name="offer_your_price">Offer your price</string>
    <string name="pending">Pending</string>
    <string name="added_suppliers">Added Suppliers</string>
    <string name="request_received">Request Received</string>
    <string name="request_sent">Request Sent</string>
    <string name="view_profile">View Profile</string>
    <string name="language">Language</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="share_app">Share the app</string>
    <string name="logout">Logout</string>
    <string name="you_have_not_added_interest">You have not added \nany interests yet</string>
    <string name="buyers_shown_interest">Buyers shown interest</string>
    <string name="you_have_not_listed_your_crops">You have not Listed your crops right now\n\n\nAdd your Crops by clicking \nbelow</string>
    <string name="view">View</string>
    <string name="response_pending_by">Response pending by</string>
    <string name="contact_to_place_order">Contact %s to place order</string>
    <string name="price_offered">Price Offered</string>
    <string name="offer_accepted_by">Offer Accepted by</string>
    <string name="offer_rejected_by">Offer Rejected by</string>
    <string name="price_range_to">Price Range : ₹ %s to ₹ %s</string>
    <string name="transportation_available">Transportation \nAvailable</string>
    <string name="transportation_not_available">Transportation \nNot Available</string>
    <string name="added_buyers">Added Buyers</string>
    <string name="crop_listings">Crop Listings</string>
    <string name="buyers_requirements">Buyer\'s Requirements</string>
    <string name="posted_interest">Posted Interest</string>
    <string name="log_out">Log out ?</string>
    <string name="you_will_be_logout">You will be logout of your account with us,\nare you sure you want to continue?</string>
    <string name="share_us_on">Share us on</string>
    <string name="all_crops">All Crops</string>
    <string name="edit_images">Edit Images</string>
    <string name="size_of_images_should_not_exeed">* The size of selected images should not exeed 4 MB</string>
    <string name="save">Save</string>
    <string name="no_offers_right_now">No Offers right Now</string>
    <string name="price2">Price -</string>
    <string name="quantity2">Quantity -</string>
    <string name="select_images">Select Images</string>
    <string name="you_have_not_posted_any_requirements">You have not posted any requirements\nright now\n\n\nAdd your Crops by \nclicking below</string>
    <string name="no_offers_from_suppliers_right_now">No Offers from Suppliers right now</string>
    <string name="sort_by">Sort By</string>
    <string name="top_seller">Top seller</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="product_name_a_z">Product Name A-Z</string>
    <string name="product_name_z_a">Product Name Z-A</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="farmer_group_fpo">Farmer Group / FPO</string>
    <string name="trader_buyer">Trader / Buyer</string>
    <string name="added_buyer">Added Buyer</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="offer">Offer</string>
    <string name="offer_details">Offer Details</string>
    <string name="reject">Reject</string>
    <string name="per_kg_2">(per kg)</string>
    <string name="posted_counter_offer">Posted Counter Offer</string>
    <string name="user_management">User Management</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="good_morning">Good Morning</string>
    <string name="user_registered">User Registered</string>
    <string name="today">Today</string>
    <string name="sellers">Sellers</string>
    <string name="total">Total</string>
    <string name="crops_listed">Crops Listed</string>
    <string name="otp">OTP</string>
</resources>