<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.farmsbook.farmsbook.buyer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_requirements"
        android:name="com.farmsbook.farmsbook.buyer.ui.requirements.RequirementsFragment"
        android:label="@string/title_requirements"
        tools:layout="@layout/fragment_requirements" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.farmsbook.farmsbook.buyer.ui.suppliers.SuppliersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_suppliers" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.farmsbook.farmsbook.buyer.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>