<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfd"
    tools:context=".seller.ui.listings.AddListingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:tint="@color/white"
            app:srcCompat="@drawable/keyboard_backspace" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="3"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:text="@string/add_listing"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1400dp"
            android:background="#f4f4f4"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/type_of_buy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/varietyEdt" />

            <RadioButton
                android:id="@+id/oc_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/on_commission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <RadioButton
                android:id="@+id/fr_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/roboto"
                android:text="@string/fixed_rate"
                app:layout_constraintStart_toEndOf="@+id/oc_rb"
                app:layout_constraintTop_toTopOf="@+id/oc_rb" />

            <TextView
                android:id="@+id/textView22_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/crop_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edtxt_background_rounded3"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/crop_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_1" />

            <TextView
                android:id="@+id/textView22_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/variety"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEdt" />

            <EditText
                android:id="@+id/varietyEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edtxt_background_rounded3"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/variety"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_2" />

            <TextView
                android:id="@+id/textView22_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oc_rb" />

            <EditText
                android:id="@+id/rateEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edtxt_background_rounded3"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/rate"
                android:inputType="number"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_7" />
            <TextView
                android:id="@+id/textView22_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/price_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateEdt" />

            <EditText
                android:id="@+id/minEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edtxt_background_rounded3"
                android:fontFamily="@font/roboto"
                android:hint="@string/min_amount"
                android:inputType="number"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/maxEdt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_3" />

            <EditText
                android:id="@+id/maxEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edtxt_background_rounded3"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/max_amount"
                android:inputType="number"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/minEdt"
                app:layout_constraintTop_toBottomOf="@+id/textView22_3" />

            <TextView
                android:id="@+id/textView22_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minEdt" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_4">

                <EditText
                    android:id="@+id/amountEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edtxt_background_rounded3"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:padding="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/maxEdt"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22_4" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView22_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationEdt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_5">

                <!-- Inside text input layout add
                      an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/select_your_state" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView17_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/transportation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationEdt" />

            <RadioButton
                android:id="@+id/req_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17_2" />

            <RadioButton
                android:id="@+id/nreq_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/not_available"
                app:layout_constraintStart_toEndOf="@+id/req_rb"
                app:layout_constraintTop_toTopOf="@+id/req_rb" />


            <TextView
                android:id="@+id/textView17_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/type_of_farming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/req_rb" />

            <RadioButton
                android:id="@+id/uo_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unorganic"
                android:fontFamily="@font/roboto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17_3" />

            <RadioButton
                android:id="@+id/or_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/organic"
                android:fontFamily="@font/roboto"
                app:layout_constraintStart_toEndOf="@+id/uo_rb"
                app:layout_constraintTop_toTopOf="@+id/uo_rb" />

            <TextView
                android:id="@+id/textView22_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/time_of_sowing"
                android:fontFamily="@font/roboto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uo_rb" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeEdt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22_6">

                <!-- Inside text input layout add
                      an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:editable="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/select_month" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/button_background_rounded_3"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingHorizontal="30dp"
                android:paddingVertical="12dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeEdt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>