<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.ui.login.AdminOtpActivity">

    <TextView
        android:id="@+id/text_verify_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/verify_your_number"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/text_verify_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/otp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:text="@string/verify"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>